[package]
name = "github-webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1" , features = ["macros", "rt-multi-thread"] }
axum = "0.7.4"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "macros", "time", "json"]}
dotenvy = "0.15.7"
tower-http = { features = ["cors", "trace"], version = "0.5.2" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
